--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <body>
 <h1>Hello World</h1>
 <h1>Hello sunhaoxin </h1>
+<h1>Hello sunhaoxin </h1>
 <p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>
 <img src="./sucai/img.png" />
 <h2>hello world</h2>
