--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <h1>Hello World</h1>
 <h2>Hello sunhaoxin </h2>
 <p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>
-<a href="https://www.zcool.com.cn/u/14334552">请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</a>
+<a href="https://www.zcool.com.cn/u/14334552"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p></a>
 <img src="./sucai/img.png" />
 <h2>hello world</h2>
 <h4>外面于下得很大我却没有伞回家</h4>
