--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<body bgcolor="#000000">
-    <body bgcolor="rgb(0,0,0)">
-    <body bgcolor="black">
+<body background="#000000">
+<body background="rgb(0,0,0)">
+<body background="black">
 <h2>Hello sunhaoxin </h2>
 <a href="https://www.zcool.com.cn/u/14334552"><p>点击这个网站收藏到你的收藏夹！日后来看我更新的作品！</p></a>
 <img src="./sucai/img.png" />
