--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <body background="#000000">
-        <body background="rgb(0,0,0)">
-        <body background="black">
+    <body background="clouds.gif">
+        <body background="http://www.w3school.com.cn/clouds.gif">
 <h1>Hello World</h1>
 <h2>Hello sunhaoxin </h2>
 <a href="https://www.zcool.com.cn/u/14334552"><p>点击这个网站收藏到你的收藏夹！日后来看我更新的作品！</p></a>
 <img src="./sucai/img.png" />
-<h2>hello world</h2>
 <h4>外面于下得很大我却没有伞回家</h4>
 </body>
 </html>
