--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <body background="clouds.gif">
+    <body background="img.png">
         <body background="http://www.w3school.com.cn/clouds.gif">
 <h1>Hello World</h1>
 <h2>Hello sunhaoxin </h2>
