--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
 <body>
-    <body background="img.png">
+
+<body background="img.png">
 <h1>Hello World</h1>
 <h2>Hello sunhaoxin </h2>
 <a href="https://www.zcool.com.cn/u/14334552"><p>点击这个网站收藏到你的收藏夹！日后来看我更新的作品！</p></a>
 <img src="./sucai/img.png" />
 <h4>外面于下得很大我却没有伞回家</h4>
+<video width="420" controls>
+    <source src="mov_bbb.mp4" type="video/mp4">
+    <source src="mov_bbb.ogg" type="video/ogg">
+   Your browser does not support the video tag.
+  </video>
+  
 </body>
 </html>
 
