--- a/index.html
+++ b/index.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html>
 <body>
-
 <body background="img.png">
 <h1>Hello World</h1>
 <h2>Hello sunhaoxin </h2>
@@ -26,4 +25,16 @@
     编程语言
     java
     
+</html>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>vscode第一个页面</title>
+</head>
+<body>
+    就在小镇的街头
+</body>
 </html>
