--- a/index.html
+++ b/index.html
@@ -2,6 +2,16 @@
 <html>
 <body>
 <body background="img.png">
+    <html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>vscode第一个页面</title>
+</head>
+<body>
+    就在小镇的街头
+</body>
 <h1>Hello World</h1>
 <h2>Hello sunhaoxin </h2>
 <a href="https://www.zcool.com.cn/u/14334552"><p>点击这个网站收藏到你的收藏夹！日后来看我更新的作品！</p></a>
@@ -24,17 +34,4 @@
     js
     编程语言
     java
-    
-</html>
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vscode第一个页面</title>
-</head>
-<body>
-    就在小镇的街头
-</body>
-</html>
+<html>
