--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <embed src="ddd.gif">
 <h4>外面于下得很大我却没有伞回家</h4>
 <video width="800" controls>
-    <source src="mov_bbb.mp4" type="video/mp4">
+    <source src="blob:https://baike.baidu.com/f1245755-2205-4606-b2de-e3eda80f15fd" type="blob:https://baike.baidu.com/f1245755-2205-4606-b2de-e3eda80f15fd">
     <source src="mov_bbb.ogg" type="video/ogg">
    Your browser does not support the video tag.
   </video>
