--- a/index.html
+++ b/index.html
@@ -16,11 +16,15 @@
 <h2>Hello sunhaoxin </h2>
 <a href="https://www.zcool.com.cn/u/14334552"><p>点击这个网站收藏到你的收藏夹！日后来看我更新的作品！</p></a>
 <img src="./sucai/img.png" />
-<embed src="ddd.gif">
 <h4>外面于下得很大我却没有伞回家</h4>
-<video width="600" controls>
-    <source src="video.mp4" type="video/ogg">
-   Your browser does not support the video tag.
+<embed src="ddd.gif" height="200" width="200"/>
+<video width="320" height="240" controls="controls">
+    <source src="movie.mp4" type="video/mp4" />
+    <source src="movie.ogg" type="video/ogg" />
+    <source src="movie.webm" type="video/webm" />
+    <object data="movie.mp4" width="320" height="240">
+      <embed src="movie.swf" width="320" height="240" />
+    </object>
   </video>
 </body>
 </html>
