--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
 <a href="https://www.zcool.com.cn/u/14334552"><p>点击这个网站收藏到你的收藏夹！日后来看我更新的作品！</p></a>
 <img src="./sucai/img.png" />
 <h4>外面于下得很大我却没有伞回家</h4>
-<embed src="ddd.gif" height="200" width="200"/>
+<img src="ddd.gif" height="200" width="200"/>
 <video width="320" height="240" controls="controls">
-    <source src="movie.mp4" type="video/mp4" />
-    <source src="movie.ogg" type="video/ogg" />
+    <source src="video.mp4" type="video/mp4" />
+    <source src="video.ogg" type="video/ogg" />
     <source src="movie.webm" type="video/webm" />
     <object data="movie.mp4" width="320" height="240">
       <embed src="movie.swf" width="320" height="240" />
