--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <h1>Hello World</h1>
 <h2>Hello sunhaoxin </h2>
 <a href="https://www.zcool.com.cn/u/14334552"><p>点击这个网站收藏到你的收藏夹！日后来看我更新的作品！</p></a>
-<img src="./sucai/img.png" />
+<img src="./sucai/img2.jpg" />
 <h4>外面于下得很大我却没有伞回家</h4>
-<img src="ddd.gif" height="200" width="200"/>
+<img src="./sucai/ddd.gif" height="200" width="200"/>
 <video width="320" height="240" controls="controls">
-    <source src="video.mp4" type="video/mp4" />
-    <source src="video.ogg" type="video/ogg" />
+    <source src="./sucai/video.mp4" type="video/mp4" />
+    <source src="./sucai/video.mp4" type="video/ogg" />
     <source src="movie.webm" type="video/webm" />
     <object data="movie.mp4" width="320" height="240">
       <embed src="movie.swf" width="320" height="240" />
