--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <body>
-<body background="img.png">
+<body background="img2.jpg">
     <html lang="en">
 <head>
     <meta charset="UTF-8">
