--- a/index.html
+++ b/index.html
@@ -1,31 +1,17 @@
 <!DOCTYPE html>
-<html>
-<body>
-<body background="img2.jpg" height="60" width="60">
-    <html lang="en">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>vscode第一个页面</title>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>yaoleyaotou de vscode</title>
 </head>
-<body>
-    就在小镇的街头
-</body>
-<h1>Hello World</h1>
-<h2>Hello sunhaoxin </h2>
-<a href="https://www.zcool.com.cn/u/14334552"><p>点击这个网站收藏到你的收藏夹！日后来看我更新的作品！</p></a>
-<img src="./sucai/img2.jpg" />
-<h4>外面于下得很大我却没有伞回家</h4>
-<img src="./sucai/ddd.gif" height="200" width="200"/>
-<video width="320" height="240" controls="controls">
-    <source src="./sucai/video.mp4" type="video/mp4" />
-    <source src="./sucai/video.mp4" type="video/ogg" />
-    <source src="movie.webm" type="video/webm" />
-    <object data="movie.mp4" width="320" height="240">
-      <embed src="movie.swf" width="320" height="240" />
-    </object>
-  </video>
+<body background="sucai/ddd.gif">
+  <p >
+    Tomorrow
+</p>  <br>
+<a href="https://www.zcool.com.cn/u/14334552">
+  <p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  
+</a>
 </body>
 </html>
-
