--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
   <p >
     Tomorrow
 </p>  <br>
-<a href="https://www.zcool.com.cn/u/14334552">
-  <p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  
-</a>
+<a href="https://www.zcool.com.cn/u/14334552"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
 </body>
 </html>
