--- a/index.html
+++ b/index.html
@@ -7,9 +7,13 @@
   <title>yaoleyaotou de vscode</title>
 </head>
 <body background="sucai/ddd.gif">
+  <br>  <br>
   <p >
     Tomorrow
 </p>  <br>
+<style text-align:center>
+</style>
 <a href="https://www.zcool.com.cn/u/14334552"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
 </body>
 </html>
+style:text-align:center
