--- a/index.html
+++ b/index.html
@@ -5,15 +5,22 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>yaoleyaotou de vscode</title>
+  <style type="text/css">
+    p {
+        font-family: arial;
+        color: floralwhite;
+        font-size: 20px;
+        text-align: center;
+    }
+</style>
 </head>
 <body background="sucai/ddd.gif">
   <br>  <br>
   <p >
     Tomorrow
 </p>  <br>
-<style text-align:center>
-</style>
 <a href="https://www.zcool.com.cn/u/14334552"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
+
 </body>
 </html>
 style:text-align:center
