--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
 </p>  <br>
 <a href="https://www.zcool.com.cn/u/14334552"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
 </body>
+<body>
+  <img src="sucai_img2.jpg" width="300" height="200">
+</body>
 
 </html>
