--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 
-<body background="sucai/ddd.gif">
+<body background="./sucai/ddd.gif">
   <br>  <br>
   <p >
     Tomorrow
@@ -23,7 +23,7 @@
 <a href="https://www.zcool.com.cn/u/14334552"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
 </body>
 <body>
-  <img src="sucai_img2.jpg" width="300" height="200">
+  <img src="./sucai/img2.jpg" width="300" height="200">
 </body>
 
 </html>
