--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>yaoleyaotou de vscode</title>
+  <title>famengdeyewan de vscode</title>
   <style type="text/css">
     p {
         font-family: arial;
@@ -20,10 +20,8 @@
   <p >
     Tomorrow
 </p>  <br>
-<a href="https://www.zcool.com.cn/u/14334552"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
-</body>
-<body>
-  <img src="./sucai/img2.jpg" width="300" height="200">
+<a href="https://www.zcool.com.cn/u/1452"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
+<img src="./sucai/img2.jpg" width="300" height="200">
 </body>
 
 </html>
