--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 <body background="./sucai/ddd.gif">
   <br>  <br>
   <p >
-    Tomorrow
+    hello word
 </p>  <br>
-<a href="https://www.zcool.com.cn/u/1452"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
+<a href="https://www.baidu.com"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
 <img src="./sucai/img2.jpg" width="300" height="200">
 </body>
 
