--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     hello word
 </p>  <br>
 <a href="https://www.baidu.com"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
-<img src="./sucai/img2.jpg" width="300" height="200">
+<img src="./sucai/img2.jpg" alt="center" width="300" height="200">
 </body>
 
 </html>
