--- a/index.html
+++ b/index.html
@@ -12,16 +12,17 @@
         font-size: 20px;
         text-align: center;
     }
+    sucai/img2.jpg_center
+      text-align:picture-in-picture
   </style>
 </head>
 
-<body background="./sucai/ddd.gif">
+<body background="sucai/ddd.gif">
   <br>  <br>
   <p >
     hello word
 </p>  <br>
 <a href="https://www.baidu.com"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
-<div align="center"><img src="./sucai/img2.jpg"</div>
+<img src="sucai/img2.jpg" width="300" height="200">
 </body>
-
 </html>
