--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
         text-align: center;
     }
   </style>
+  <style type="text/css">
+    p {
+        image-rendering: center;
+    }
+  </style>
 </head>
 
 <body background="sucai/ddd.gif">
@@ -22,12 +27,6 @@
   </p>  <br>
   <a href="https://www.baidu.com"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
   <img src="sucai/img2.jpg" width="300" height="200">
-  <p>
-    sucai/img2.jpg_center
-  text-align:picture-in-picture
-  </p>
-  sucai/img2.jpg_center
-  text-align:picture-in-picture
 </body>
 
 </html>
