--- a/index.html
+++ b/index.html
@@ -13,11 +13,6 @@
         text-align: center;
     }
   </style>
-  <style type="text/css">
-    p {
-        image-rendering: center;
-    }
-  </style>
 </head>
 
 <body background="sucai/ddd.gif">
@@ -26,7 +21,9 @@
     hello word
   </p>  <br>
   <a href="https://www.baidu.com"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
-  <img src="sucai/img2.jpg" width="300" height="200">
+  <p style="text-align: center;">
+       <img src="./sucai/img2.jpg" width="300" height="200">
+  </p>
 </body>
 
 </html>
