--- a/index.html
+++ b/index.html
@@ -22,8 +22,30 @@
   </p>  <br>
   <a href="https://www.baidu.com"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
   <p style="text-align: center;">
-       <img src="./sucai/img2.jpg" width="300" height="200">
+       <img src="./sucai/img2.jpg" width="600" height="300">
   </p>
+</body>
+<body>
+  <div class="slidershow middle">
+    <div class="slides">
+      <div class="slide">
+        <img src="sucai/img2.jpg">
+      </div>
+
+      <div class="slide">
+        <img src="sucai/img3.jpg">
+      </div>
+
+      <div class="slide">
+        <img src="sucai/img4.jpg">
+      </div>
+
+      <div class="slide">
+        <img src="sucai/img5.jpg">
+      </div>
+
+    </div>
+  </div>
 </body>
 
 </html>
