--- a/index.html
+++ b/index.html
@@ -26,26 +26,25 @@
   </p>
 </body>
 <body>
-  <div class="slidershow middle">
+  <div class="slidershow middle" width="600" height="300">
     <div class="slides">
       <div class="slide">
-        <img src="sucai/img2.jpg">
+        <img src="sucai/img2.jpg" width="600" height="300">
       </div>
 
       <div class="slide">
-        <img src="sucai/img3.jpg">
+        <img src="sucai/img3.jpg" width="600" height="300">
       </div>
 
       <div class="slide">
-        <img src="sucai/img4.jpg">
+        <img src="sucai/img4.jpg" width="600" height="300">
       </div>
 
       <div class="slide">
-        <img src="sucai/img5.jpg">
+        <img src="sucai/img5.jpg" width="600" height="300">
       </div>
-
+    <div class="navigatin"></div>  
     </div>
   </div>
 </body>
-
 </html>
