--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body background="sucai/ddd.gif">
   <br>  <br>
   <p >
-    hello word
+    <h2>hello word</h2>
   </p>  <br>
   <a href="https://www.baidu.com"><p>请把这个网站收藏到你的收藏夹，日后来看我更新的博客！</p>  </a>
   <p style="text-align: center;">
